Prevent .post-date from wrapping

--- a/_sass/_blog.sass
+++ b/_sass/_blog.sass
@@ -4,6 +4,8 @@
   margin: 1em 0
   .header
     display: flex
+  .post-date
+    white-space: nowrap
   .post-link
     flex-grow: 1
     margin-left: 1em
